--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -9,13 +9,12 @@
   <div class="animated fadeIn">
 
     <div class="card-block">
-      <table class="table table-striped table-bordered datatable" [mfData]="users | userDataFilter : filterQuery" #mf="mfDataTable"
-        [mfRowsOnPage]="rowsOnPage">
+      <table class="table table-striped table-bordered datatable" [mfData]="users" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage">
         <thead>
           <tr>
             <th colspan="4">
               Search by Name:
-              <input class="form-control"  />
+              <input class="form-control" />
             </th>
             <th colspan="1">
               <a class="btn btn-success" style="float: right;" href="#" data-toggle="modal" data-target="#createModal">
@@ -24,8 +23,8 @@
             </th>
           </tr>
           <tr>
-            <th>FirstName</th>
-            <th>LastName</th>
+            <th>First Name</th>
+            <th>Last Name</th>
             <th>Email</th>
             <th>Actions</th>
           </tr>
@@ -60,5 +59,104 @@
       </table>
     </div>
 
+  </div>
+</div>
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">New user</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+      </div>
+      <div class="modal-body">
+        <div class="card">
+          <div class="card-block">
+            <div class="form-group">
+              <label for="company">First Name</label>
+              <input [(ngModel)]="newUser.first_name" name="name" type="text" class="form-control" id="first_name" placeholder="First name">
+            </div>
+            <div class="form-group">
+              <label for="vat">Last Name</label>
+              <input [(ngModel)]="newUser.last_name" name="login" type="text" class="form-control" id="last_name" placeholder="Last name">
+            </div>
+            <div class="form-group">
+              <label for="street">Email</label>
+              <input [(ngModel)]="newUser.email" name="email" type="email" class="form-control" id="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="street">Tel</label>
+              <input [(ngModel)]="newUser.tel" name="email" type="text" class="form-control" id="tel" placeholder="Phone number">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" (click)="saveUser()" data-dismiss="modal" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">update user</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+      </div>
+      <div class="modal-body">
+        <div class="card">
+          <div class="card-block">
+            <div class="form-group">
+              <label for="company">First Name</label>
+              <input [(ngModel)]="selectedUser.first_name" name="name" type="text" class="form-control" id="first_name" placeholder="First name">
+            </div>
+            <div class="form-group">
+              <label for="vat">Last Name</label>
+              <input [(ngModel)]="selectedUser.last_name" name="login" type="text" class="form-control" id="last_name" placeholder="Last name">
+            </div>
+            <div class="form-group">
+              <label for="street">Email</label>
+              <input [(ngModel)]="selectedUser.email" name="email" type="email" class="form-control" id="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="street">Tel</label>
+              <input [(ngModel)]="selectedUser.tel" name="email" type="text" class="form-control" id="tel" placeholder="Phone number">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" (click)="editUser()" data-dismiss="modal" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Delete user</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+      </div>
+      <div class="modal-body">
+        <div class="card">
+          <div class="card-block">
+            <h6>Are you shoure of deleting user <strong>{{ selectedUser.email }} ??</strong></h6>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" (click)="deleteUser()" data-dismiss="modal" class="btn btn-danger">Yes, delete</button>
+      </div>
+    </div>
   </div>
 </div>
